# linkedin_sourcing_agent

./: .env  API_SETUP_GUIDE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXED.md  DEPLOY_ORIGINAL.md  EXPORT_INTEGRATION_COMPLETE.md  GOOGLE_SHEETS_SETUP.md  HACKATHON_README.md  HACKATHON_WRITEUP.md  OUTPUT_LOCATIONS.md  PLOTLY_CHART_FIX.md  README.md  REAL_MODEL_DEPLOYMENT.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_WEBAPP.md  TRANSFORMATION_COMPLETE.md  WHERE_ARE_MY_OUTPUTS.md  api_server.py  app_streamlit_cloud.py  install_deps.py  install_package.sh  linkedin_agent.py  packages.txt  requirements.txt  requirements_clean.txt  requirements_streamlit.txt  setup.py  start_webapp.bat  start_webapp.sh  streamlit_app.py  test_api.py  test_excel_api.py  verify_functionalities.py  where_are_messages.py
.streamlit/: config.toml
linkedin_sourcing_agent/: CHANGELOG.md  PROJECT_TRANSFORMATION_SUMMARY.md  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt
linkedin_sourcing_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
linkedin_sourcing_agent/cli/: __init__.py  main.py
linkedin_sourcing_agent/config/: __init__.py  defaults.py
linkedin_sourcing_agent/core/: agent.py
linkedin_sourcing_agent/docs/: api_documentation.md
linkedin_sourcing_agent/examples/: __init__.py  advanced_example.py  basic_example.py
linkedin_sourcing_agent/generators/: __init__.py  open_source_models.py  outreach_generator.py  outreach_generator_new.py
linkedin_sourcing_agent/scoring/: __init__.py  fit_scorer.py  multi_source_scorer.py
linkedin_sourcing_agent/scrapers/: __init__.py  linkedin_scraper.py  multi_source_scraper.py
linkedin_sourcing_agent/tests/: __init__.py
linkedin_sourcing_agent/tests/integration/: __init__.py
linkedin_sourcing_agent/tests/unit/: __init__.py  test_config_manager.py  test_rate_limiter.py
linkedin_sourcing_agent/utils/: cache_manager.py  config_manager.py  demo_data.py  export_manager.py  logging_config.py  misc_utils.py  rate_limiter.py
outputs/: README.md
outputs/excel_exports/: search_Python_developer_20250630_160038.xlsx  search_Senior_Python_Developer_20250630_175201.xlsx  search_Software_Engineer_ML_Research_Windsurf_Codeium_LLM_code_generation_Python_PyTorch_TensorFlow_20250630_152003.xlsx  search_python_developer_machine_learning_20250630_182342.xlsx  ~$search_Senior_Python_Developer_20250630_175201.xlsx
outputs/json_data/: search_ML_Engineer_20250630_155513.json  search_Machine_Learning_Engineer_20250630_151909.json  search_Python_developer_20250630_160038.json  search_Senior_Python_Developer_20250630_175201.json  search_Software_Engineer_ML_Research_Windsurf_Codeium_LLM_code_generation_Python_PyTorch_TensorFlow_20250630_152003.json  search_python_developer_machine_learning_20250630_182342.json
